--- a/Banking App/depositForm.html
+++ b/Banking App/depositForm.html
@@ -22,28 +22,26 @@ $(function(){
 
 <link rel="stylesheet" href="style.css">
 
-   
 </head>
 <body>
 
 <div id="header"></div>
-
     <h1 style="text-align:center">Enter Detail's</h1>
     <form action="#">
    <div class="main">
-        <table style="width:350px;height:200px;">
+        <table style="height:160px">
             <tr>
                 <th>Account No</th>
                 <td><input type="number" required></td>
             </tr>
 
             <tr>
-                    <th>Amount To Withdraw</th>
+                    <th>Amount To Deposit</th>
                     <td><input type="number" required></td>
             </tr>
                 
                 <tr>
-                        <td><button type="submit"class="alignbutton" value="Submit">Withdraw</button> </td>
+                        <td><button type="submit"class="alignbutton" value="Submit">Deposit</button> </td>
                 </tr>
 
         </table>
