--- a/Banking App/signin.html
+++ b/Banking App/signin.html
@@ -22,28 +22,27 @@ $(function(){
 
 <link rel="stylesheet" href="style.css">
 
-   
 </head>
 <body>
 
 <div id="header"></div>
 
-    <h1 style="text-align:center">Enter Detail's</h1>
+    <h1 style="text-align:center">Welcome, Enter Your Credentials</h1>
     <form action="#">
-   <div class="main">
-        <table style="width:350px;height:200px;">
+   <div class="main" style="width:300px;height:200px;background-color:white;border:none;">
+        <table style="height:140px">
             <tr>
-                <th>Account No</th>
-                <td><input type="number" required></td>
+                <th>User ID</th>
+                <td><input type="text" required></td>
             </tr>
 
             <tr>
-                    <th>Amount To Withdraw</th>
-                    <td><input type="number" required></td>
+                    <th>Password</th>
+                    <td><input type="password" required></td>
             </tr>
                 
                 <tr>
-                        <td><button type="submit"class="alignbutton" value="Submit">Withdraw</button> </td>
+                        <td><button type="submit"class="alignbutton" value="Submit">Signin</button> </td>
                 </tr>
 
         </table>
