--- a/Banking App/viewAccount.html
+++ b/Banking App/viewAccount.html
@@ -20,32 +20,15 @@ $(function(){
 
     <link rel="stylesheet" href="style.css">
 
-        <style>
-            table
-            {
-                border-collapse:collapse;
-                border: 1px solid black;
-                width:300px;
-                height:300px;            
-            }
-
-            .alignCenter
-            {
-                
-                position:relative;
-                left:500px;
-            }
-        
-        </style>
 
 </head>
 <body>
 
     <div id="header"></div>
 
-<div class="alignCenter">
+<div class="main" style="text-align:center;">
 
-    <h1> Account Detail's</h1>
+    <h1 class="head"> Account Detail's</h1>
     <table>
         <tr>
             <td>Account Number</td>
