--- a/Banking App/depositForm.html
+++ b/Banking App/depositForm.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Deposit</title>
 
 
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
-</script>
-<script> 
-$(function(){
-  $("#header").load("header.html"); 
-  $("#footer").load("footer.html"); 
-});
-</script>
+    </script>
+
+    <script> 
+    $(function(){
+    $("#header").load("header.html"); 
+    $("#footer").load("footer.html"); 
+    });
+    </script>
 
 
 <link rel="stylesheet" href="style.css">
@@ -25,10 +26,11 @@ $(function(){
 </head>
 <body>
 
-<div id="header"></div>
+    <div id="header"></div>
     <h1 style="text-align:center">Enter Detail's</h1>
+
     <form action="#">
-   <div class="main">
+        <div class="main">
         <table style="height:160px">
             <tr>
                 <th>Account No</th>
@@ -47,8 +49,9 @@ $(function(){
         </table>
         
   
-</div>
-</form>
+        </div>
+
+    </form>
 
 
 
