--- a/Banking App/fundTransfer.html
+++ b/Banking App/fundTransfer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Transfer</title>
 
 
     <script
@@ -59,6 +59,7 @@ $(function(){
 
         </table>
         
+
   
 </div>
 </form>
