--- a/Banking App/index.html
+++ b/Banking App/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Home Page</title>
 
     <link rel="stylesheet" href="style.css">
     <script
@@ -12,12 +12,13 @@
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
     </script>
-<script> 
-$(function(){
-  $("#header").load("header.html"); 
-  $("#footer").load("footer.html"); 
-});
-</script>
+
+    <script> 
+    $(function(){
+    $("#header").load("header.html"); 
+    $("#footer").load("footer.html"); 
+    });
+    </script>
 
 <style>
     .middle
@@ -40,15 +41,18 @@ $(function(){
     <div id="header"></div>
 
     <div id="middle" style="background-image: url(images/background1.jpg); height:400px">
-  <h1 style="text-align:center">WELCOME TO HDFC</h1>  
-<form>
-   <input type="text" required class="in" placeholder="User Name"> <br><br>
-   <input type="password" required class="in" placeholder="password"><br><br>
-  <input type="submit" value="submit" class="in">
 
-</form> 
+    <h1 style="text-align:center">WELCOME TO HDFC</h1>  
+    
+    <form>
+        <input type="text" required class="in" placeholder="User Name"> <br><br>
+        <input type="password" required class="in" placeholder="password"><br><br>
+        <input type="submit" value="submit" class="in">
+
+    </form> 
 
     </div>
+    
     <div id="footer"></div>
 
 </body>
