--- a/Banking App/searchAccount.html
+++ b/Banking App/searchAccount.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Search</title>
 
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous">
 </script>
-<script> 
-$(function(){
-  $("#header").load("header.html"); 
-  $("#footer").load("footer.html"); 
-});
-</script>
+
+    <script> 
+    $(function(){
+    $("#header").load("header.html"); 
+    $("#footer").load("footer.html"); 
+    });
+    </script>
 
 <link rel="stylesheet" href="style.css">
 
@@ -37,7 +38,7 @@ $(function(){
     
     <h1>Enter Your Account Number</h1>
 
-    <form action="#">
+    <form action="viewAccount">
         <label>Account No: </label>
         <label><input type="text"></label>
         
@@ -46,6 +47,7 @@ $(function(){
         <input type="button" value="submit">
     </form>   
     </div>
+
 
 
     <div id="footer"></div>
